# WFF2CNF

./: CMakeLists.txt  README.md  main.cpp
src/: AST.cpp  AST.hpp  Operators.cpp  Operators.hpp  Symbols.cpp  Symbols.hpp  Token.hpp  Transformer.cpp  Transformer.hpp  main.cpp  operators.cpp  operators.hpp
